# modelcar-base-image

./: .gitignore  Containerfile  Containerfile-modelcar  Containerfile-rust  Containerfile.modelcar  README.md  TAILME.md  go.mod  isvc-granite.yaml  link-model-and-wait.go  link-model-and-wait.rs  repeat.sh  servingruntime-test-1.yaml  tailf  tailf.go
.github/workflows/: build.yaml  e2e.yaml  publish-python.yaml  publish.yaml
.tekton/: demo20241108-base-pull-request.yaml  demo20241108-base-push.yaml
demos/: Containerfile-granite  Containerfile-micro-granite  Containerfile-modelcar  Containerfile-modelcar-busybox  GRANITE.md  ORAS.md  isvc-modelcar-busybox.yaml  isvc-modelcar.yaml  servingruntime-sklearn.yaml
e2e/: Containerfile-modelcar
python/: Makefile  pyproject.toml
python/src/modelcar_base_image/: embedded_oci_layout.py
python/tests/: __init__.py  embedded_oci_layout_test.py  test_constants.py
