[project]
name = "modelcar-base-image"
version = "0.1.0"
description = "A minimal base image for KServe Modelcar/sidecar"
readme = "README.md"
authors = [
    { name = "tarilabs", email = "matteo.mortari@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
